--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="index.html">
+    <link rel="stylesheet" href="/CSS/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISMED</title>
 </head>
-
+<style>
+    
+</style>
 <body>
 
 
@@ -17,7 +19,8 @@
 
 
         <nav>
-            <ul>
+            <ul class ="menu">
+                
                 <li><a href="index.html">Página Inicial</a></li>
 
                 <li><a href="cadastropaciente.html">Cadastramento De Consultas</a></li>
