Tela de login e cadastro
feita no html apenas, aplicarei css em breve

--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -60,7 +60,7 @@
                           <p class="branco">Sua mente mais Saudável.</b></p>
                       </div>                              
                                                         
-                      <img src="uploads/capa/banner-home.jpg" alt="Você Fitness" title="Você Fitness"/>
+                      <img src="uploads/capa/banner-home.jpg" alt="PisicoSoft" title="PisicoSoft"/>
                     </div>
                 </article>
             
