--- a/onepage-template-03-tema-voce-fitness/login.html
+++ b/onepage-template-03-tema-voce-fitness/login.html
@@ -55,14 +55,14 @@
           <div class="content">
             <div class="checkbox">
               <input type="checkbox" name="checkbox" id="checkbox" />
-              <label for="">Remember me</label>
+              <label for="">Lembre-me</label>
             </div>
             <div class="pass-link">
               <a href="#">Forgot password</a>
             </div>
           </div>
           <button type="submit" value="submit">Login</button>
-          <span>Or use your account</span>
+          <span>Ou use sua conta</span>
           <div class="social-container">
             <a href="#" class="social"
               ><i class="fa-brands fa-facebook-f"></i
@@ -89,14 +89,13 @@
 
           <div class="overlay-panel overlay-right">
             <h1 class="title">
-              Start your <br />
-              journey now
+              Comece Agora
             </h1>
             <p>
               If you don'n have an account yet, join us and start your journey
             </p>
             <button class="ghost" id="register">
-              Register
+              Registrar
               <i class="fa-solid fa-arrow-right"></i>
             </button>
           </div>
