--- a/onepage-template-03-tema-voce-fitness/login.html
+++ b/onepage-template-03-tema-voce-fitness/login.html
@@ -70,7 +70,7 @@
           <div class="content">
             <div class="checkbox">
               <input type="checkbox" name="checkbox" id="checkbox" />
-              <label for="">Lembre-me</label>
+              <label for="">Remember me</label>
             </div>
 
             <div class="pass-link">
@@ -81,10 +81,7 @@
 
           <button type="submit" value="submit">Login</button>
 
-
           <span>Or use your account</span>
-
-          <span>Ou use sua conta</span>
 
           <div class="social-container">
             <a href="#" class="social"><i class="fa-brands fa-facebook-f"></i></a>
@@ -109,19 +106,12 @@
           </div>
 
           <div class="overlay-panel overlay-right">
+
             <h1 class="title">Start your <br/>journey now</h1>
 
             <p>If you don'n have an account yet, join us and start your journey</p>
 
             <button class="ghost" id="register">Register
-            <h1 class="title">
-              Comece Agora
-            </h1>
-            <p>
-              If you don'n have an account yet, join us and start your journey
-            </p>
-            <button class="ghost" id="register">
-              Registrar
               <i class="fa-solid fa-arrow-right"></i>
               
             </button>
