--- a/onepage-template-03-tema-voce-fitness/login.html
+++ b/onepage-template-03-tema-voce-fitness/login.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="estilo.css">
+
     <title>Login PisicoSoft</title>
+
 </head>
 
 
@@ -71,6 +76,8 @@
 
           <button type="submit" value="submit">Login</button>
 
+          <button type="button ">Regristrar-se</button>
+
         </form>
 
       </div>
@@ -80,8 +87,5 @@
     </div>
   </body>
 
-  <footer class="fim">
-    
-
-  </footer>
+  
 </html>
