--- a/onepage-template-03-tema-voce-fitness/login.html
+++ b/onepage-template-03-tema-voce-fitness/login.html
@@ -14,6 +14,11 @@
 
 
 <body>
+
+
+  <div>
+    <h1>PSICOSOFT</h1>
+  </div>
     <div class="container" id="container">
       <div class="form-container register-container">
 
@@ -64,8 +69,11 @@
 
           <div class="content">
             <div class="checkbox">
+
               <input type="checkbox" name="checkbox" id="checkbox" />
+
               <label for="">Lembrar-me</label>
+
             </div>
 
             <div class="pass-link">
@@ -74,9 +82,10 @@
 
           </div>
 
-          <button type="submit" value="submit">Login</button>
+          <a href="index.html" class="button">login</a>
 
-          <button type="button ">Regristrar-se</button>
+          <a href="" >Registrar-se</a>
+          
 
         </form>
 
