--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-<header class="main_header container">
+<header class="main_header container fixed">
         
     <div class="content">
     
