--- a/onepage-template-03-tema-voce-fitness/login.html
+++ b/onepage-template-03-tema-voce-fitness/login.html
@@ -17,7 +17,7 @@
 
 
   <div>
-    <h1>PSICOSOFT</h1>
+    <h1 id="titulo">PSICOSOFT</h1>
   </div>
     <div class="container" id="container">
       <div class="form-container register-container">
@@ -84,7 +84,7 @@
 
           <a href="index.html" class="button">login</a>
 
-          <a href="" >Registrar-se</a>
+          <a href="cadastro.html" >Registrar-se</a>
           
 
         </form>
