--- a/onepage-template-03-tema-voce-fitness/cadastro.html
+++ b/onepage-template-03-tema-voce-fitness/cadastro.html
@@ -58,12 +58,24 @@
                     <span></span>
                 </div>
 
+                <div class="form-control2">
+                    <input type="text" class="name" placeholder="endereço" />
+                    <small class="password-error-2"></small>
+                    <span></span>
+                </div>
+
                 <div class="form-control2">                  
                     <input type="text" name="cpf"
                     pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" title="Digite o CPF no formato nnn.nnn.nnn-nn" 
                     placeholder="CPF:"/> 
                     
                 </div>
+                
+                <div class="form-control2">
+                    <label for="datanascimento" class="form_control2">Data de Nascimento</label>
+                    <input type="date" name="datanascimento" class="form-control2" id="datanascimento" 
+                    placeholder="Data de Nascimento" required>
+                </div> 
 
                 <div class="content">
 
