--- a/onepage-template-03-tema-voce-fitness/cadastro.html
+++ b/onepage-template-03-tema-voce-fitness/cadastro.html
@@ -17,7 +17,7 @@
                         <h1>Cadastre-se</h1>
                     </div>
                     <div class="login-button">
-                        <button><a href="#">Entrar</a></button>
+                        <button><a href="login.html">Entrar</a></button>
                     </div>
                 </div>
 
@@ -48,8 +48,8 @@
 
 
                     <div class="input-box">
-                        <label for="confirmPassword">CPF</label>
-                        <input id="confirmPassword" type="password" name="confirmPassword" placeholder="Digite seu CPF" required>
+                        <label for="cpf">CPF</label>
+                        <input id="cpf" type="text" name="cpf" placeholder="Digite seu CPF" required>
                     </div>
 
                     <div class="input-box">
@@ -58,8 +58,8 @@
                     </div>
 
                     <div class="input-box">
-                        <label for="confirmPassword">Endereço</label>
-                        <input id="confirmPassword" type="password" name="confirmPassword" placeholder="Rua/Cidade/Estado" required>
+                        <label for="Endereco">Endereço</label>
+                        <input id="endereco" type="text" name="endereco" placeholder="Rua/Cidade/Estado" required>
                     </div>
 
                     <div class="gender-inputs">
@@ -93,7 +93,7 @@
                 </div>
 
                 <div class="continue-button">
-                    <button><a href="#">Continuar</a> </button>
+                    <button><a href="login.html">Continuar</a> </button>
                 </div>
             </form>
         </div>
