--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -35,9 +35,9 @@
 
             <ul class="main_header_nav" id="top">
 
-                <li class="main_header_nav_item"><a href="" class="scrollSuave menuAtivo" title="Início"> Entrar</a>
+                <li class="main_header_nav_item"><a href="login.html" class="scrollSuave menuAtivo" title="Início"> Entrar</a>
                 </li>
-                <li class="main_header_nav_item"><a href="#modalidades" class="scrollSuave" title="Modalidades">
+                <li class="main_header_nav_item"><a href="cadastro.html" class="scrollSuave" title="Modalidades">
                         Cadastrar</a></li>
 
             </ul>
