Added login and register

--- a/onepage-template-03-tema-voce-fitness/login.html
+++ b/onepage-template-03-tema-voce-fitness/login.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="estilo.css">
 
+    <script src="js/login.js"></script>
+
     <title>Login PisicoSoft</title>
 
 </head>
@@ -82,7 +84,7 @@
 
           </div>
 
-          <a href="index.html" class="button">login</a>
+          <a onclick="login()" class="button">login</a>
 
           <a href="cadastro.html" >Registrar-se</a>
           
