--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -35,7 +35,8 @@
 
             <ul class="main_header_nav" id="top">
 
-                <li class="main_header_nav_item"><a href="login.html" class="scrollSuave menuAtivo" title="Início"> Entrar</a>
+                <li class="main_header_nav_item"><a href="login.html" class="scrollSuave menuAtivo" title="Início">
+                        Entrar</a>
                 </li>
                 <li class="main_header_nav_item"><a href="cadastro.html" class="scrollSuave" title="Modalidades">
                         Cadastrar</a></li>
@@ -74,14 +75,20 @@
 
         <section id="contato" class="section-contato container">
 
+
             <div id="conteudo">
 
                 <div id="item">conheça a PisicoSoft</div>
+
                 <div id="item">aqui voce adiministra a sua clinica</div>
+
                 <div id="item">e consegue marcar consutlas</div>
 
+                <div id="item">e consegue marcar consutlas</div>
+
+
             </div>
-            
+
             <div class="content">
 
                 <h2 class="title center verde">Fale Conosco</h2>
