--- a/onepage-template-03-tema-voce-fitness/cadastro.html
+++ b/onepage-template-03-tema-voce-fitness/cadastro.html
@@ -92,7 +92,7 @@
                 </div>
 
                 <div class="continue-button">
-                    <button type="button" id="submit"><a>Continuar</a></button>
+                    <button type="button" id="submit"><a>Cadastrar</a></button>
                 </div>
             </form>
         </div>
