telas e + Telas e MAIS TELAS

--- a/onepage-template-03-tema-voce-fitness/consulta.html
+++ b/onepage-template-03-tema-voce-fitness/consulta.html
@@ -45,7 +45,8 @@
 
             <textarea id="notes" name="notes" rows="15"></textarea>
 
-            <button><a href="#">Agendar</a></button> 
+            <button><a href="pagamento.html">Agendar</button> 
+            <button><a href="index.html">Cancelar</button> 
         </form>
 
     </div>
