--- a/onepage-template-03-tema-voce-fitness/login.html
+++ b/onepage-template-03-tema-voce-fitness/login.html
@@ -84,7 +84,7 @@
 
           </div>
 
-          <a onclick="login()" class="button">login</a>
+          <a onclick="login()" class="button" href="consulta.html">login</a>
 
           <a href="cadastro.html" >Registrar-se</a>
           
