--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -38,8 +38,11 @@
                 <li class="main_header_nav_item"><a href="login.html" class="scrollSuave menuAtivo" title="Início">
                         Entrar</a>
                 </li>
-                <li class="main_header_nav_item"><a href="cadastro.html" class="scrollSuave" title="Modalidades">
+                <li class="main_header_nav_item"><a href="cadastro.html" class="scrollSuave" title="Cadastro">
                         Cadastrar</a></li>
+
+                        <li class="main_header_nav_item"><a href="consulta.html" class="scrollSuave" title="Consulta">
+                            Consulta</a></li>
 
             </ul>
 
