--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -78,9 +78,9 @@
             <div class="conhecaContainer">
                 <div class="sobrePrincipal">
                     <div>
-                        <h2 class="sobre">Conheça a PsicoSoft</h2>
+                        <h2 class="sobre">Bem-vindo ao PSICOSOFT</h2>
                         <div class="subtitulo">
-                            <p><b>Invista na sua clínica</b> com o sistema que se molda junto com a sua necessidade.</p>
+                            <p><b>Moldando o Futuro da Saúde!</b> Com o sistema que se encaixa junto com a sua necessidade.</p>
                         </div>
                     </div>
                 </div>
@@ -89,45 +89,37 @@
                         <div class="cardsConteudo">
 
                             <div class="cardDescricaoConteiner">
-                                <h3 class="cardTitulo">A PsicoSoft te
-                                    auxilia no cuidado da sua equipe</h3>
+                                <h3 class="cardTitulo">O PSICOSOFT é um projeto em constante evolução</h3>
                                 <div class="cardDescricao">
-                                    <p>Tenha sua equipe <b>mais satisfeita e saudável</b> com os benefícios da sua
-                                        assinatura.</p>
+                                    <p><b>liderado por um grupo dedicado de sete alunos do curso de Ciências da Computação.</b> Nossa missão é transformar a forma como as consultas e exames médicos são agendados, otimizando a eficiência e a qualidade do atendimento no campo sensível da medicina.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="cardsConteudo">
 
                             <div class="cardDescricaoConteiner">
-                                <h3 class="cardTitulo">Acesso a saúde de qualidade para
-                                    seus colaboradores</h3>
+                                <h3 class="cardTitulo">Estamos atualmente na fase de desenvolvimento</h3>
                                 <div class="cardDescricao">
-                                    <p>Tornamos o cuidado com a saúde física e mental dos seus funcionários <b>mais
-                                            rápido, fácil e acessível</b>, sem abrir mão da qualidade do dr.consulta.
-                                    </p>
+                                    <p><b>Trabalhando incansavelmente</b> para criar uma plataforma que revolucionará a experiência de pacientes e profissionais de saúde.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="cardsConteudo">
 
                             <div class="cardDescricaoConteiner">
-                                <h3 class="cardTitulo">Todos os benefícios do do Sistema PsicoSoft, agora para empresas
+                                <h3 class="cardTitulo">Com o PSICOSOFT
                                 </h3>
                                 <div class="cardDescricao">
-                                    <p>Consultas, exames, odontologia e medicamentos <b>a preços reduzidos para seus
-                                            colaboradores e familiares</b>.</p>
+                                    <p>Nosso objetivo é <b>simplificar</b> o agendamento de consultas e exames, economizar tempo e, acima de tudo, elevar os padrões de assistência médica.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="cardsConteudo">
 
                             <div class="cardDescricaoConteiner">
-                                <h3 class="cardTitulo">Maior facilidade para sua gestão
-                                    de pessoas</h3>
+                                <h3 class="cardTitulo">Ainda estamos aperfeiçoando nosso projeto</h3>
                                 <div class="cardDescricao">
-                                    <p><b>Processo de contratação simplificado e fácil gestão do benefício</b> no dia a
-                                        dia, sem travas de inclusão de colaboradores ou limites de idade.</p>
+                                    <p><b>Contamos com o seu apoio e feedback</b> à medida que avançamos nessa jornada de aprimoramento da assistência médica.</p>
                                 </div>
                             </div>
                         </div>
@@ -178,10 +170,8 @@
                     <div class="info">
 
                         <p>
-                            A expressão Lorem ipsum em design gráfico e editoração é um texto padrão em latim utilizado
-                            na produção gráfica<br><br>
-                            para preencher os espaços de texto em publicações para testar e ajustar aspectos visuais
-                            antes de utilizar conteúdo real.<br><br>
+                            <br><br>
+                            <br><br>
                         </p>
 
                         <p><i class="icon icon-calendar"></i> Atendimento: Segunda a Sexta</p>
@@ -222,13 +212,13 @@
 
                 <div class="titleFooter"> <span class="icon icon-share-outline"></span> Redes Sociais</div>
                 <a href="#" class="redesocial" title="Facebook"><span> <i class="icon icon-facebook"></i>
-                        /suacademia</span></a>
+                        /suaclinica</span></a>
                 <a href="#" class="redesocial" title="Instagram"><span> <i class="icon icon-instagram"></i>
-                        /suacademia</span></a>
+                        /suaclinica</span></a>
                 <a href="#" class="redesocial" title="Twitter"><span> <i class="icon icon-twitter"></i>
-                        /suacademia</span></a>
+                    /suaclinica</span></a>
                 <a href="#" class="redesocial" title="Pinterest"><span> <i class="icon icon-pinterest"></i>
-                        /suacademia</span></a>
+                    /suaclinica</span></a>
 
             </div><!--Col Footer 2-->
 
