--- a/onepage-template-03-tema-voce-fitness/consulta.html
+++ b/onepage-template-03-tema-voce-fitness/consulta.html
@@ -13,7 +13,7 @@
 
 <body >
 
-    <header class="main_header container fixed">
+    <header class="main_header fixed">
 
         <div class="content">
 
