Fixed mobile drawer

--- a/onepage-template-03-tema-voce-fitness/consulta.html
+++ b/onepage-template-03-tema-voce-fitness/consulta.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="menu.css">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" type="text/css" href="css/fonts-icones.css">
+    <link rel="stylesheet" type="text/css" href="css/magnific-popup.css">
 
 </head>
 
@@ -85,6 +86,9 @@
         </form>
 
     </div>
+    <script src="js/jquery.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
 </body>
 
 </html>
