--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -23,8 +23,8 @@
 
 <body>
 
-    <header class="main_header container fixed">
 
+    <header class="main_header container fixed">
         <div class="content">
 
             <div class="main_header_logo">
@@ -35,22 +35,24 @@
 
             <ul class="main_header_nav" id="top">
 
-                <li class="main_header_nav_item"><a href="login.html" class="scrollSuave menuAtivo" title="Início">
-                        Entrar</a>
+                <li class="main_header_nav_item">
+                    <a href="login.html" class="scrollSuave menuAtivo" title="Início">Entrar</a>
                 </li>
-                <li class="main_header_nav_item"><a href="cadastro.html" class="scrollSuave" title="Cadastro">
-                        Cadastrar</a></li>
 
-                        <li class="main_header_nav_item"><a href="consulta.html" class="scrollSuave" title="Consulta">
-                            Consulta</a></li>
+                <li class="main_header_nav_item">
+                    <a href="cadastro.html" class="scrollSuave" title="Cadastro">Cadastrar</a>
+                </li>
 
+                <li class="main_header_nav_item">
+                    <a href="consulta.html" class="scrollSuave" title="Consulta">Consulta</a>
+                </li>
+                
             </ul>
 
             <div class="clear"></div>
-
         </div>
-
     </header>
+
 
     <main class="main_content container">
 
@@ -130,66 +132,47 @@
                 </div>
             </div>
 
-            <div class="content">
 
+
+            <div class="content">
                 <h2 class="title center verde">Fale Conosco</h2>
 
-                <div class="coluna">
-
+                <div class="coluna"> <!---Div Coluna-->
                     <form method="post" action="#" class="formulario">
-
                         <label>
-
                             <input type="text" name="nome" class="campo" placeholder="Nome" required="">
-
                         </label>
-
                         <label>
-
                             <input type="text" name="email" class="campo" placeholder="E-mail" required="">
-
                         </label>
-
                         <label>
-
                             <textarea name="mensagem" class="campo" placeholder="Deixe sua mensagem" rows="5"
                                 required=""></textarea>
-
                         </label>
-
                         <label>
-
                             <input type="hidden" name="acao" value="enviar">
                             <button class="btn-enviar" title="Enviar">Enviar</button>
-
                         </label>
-
                     </form>
-
-                </div><!---Div Coluna-->
+                </div>
 
                 <div class="coluna">
-
                     <div class="info">
-
                         <p>
                             <br><br>
                             <br><br>
                         </p>
-
                         <p><i class="icon icon-calendar"></i> Atendimento: Segunda a Sexta</p>
                         <p><i class="icon icon-pin-1"></i> Local: Estado e Cidade</p>
                         <p><i class="icon icon-phone"></i> 21 0000-0000</p>
                         <p><i class="icon icon-whatsapp"></i> 21 90000-0000</p>
                         <p><i class="icon icon-clock-2"></i> 9:00 ás 20:00</p>
-
                     </div>
-
                 </div><!---Div Coluna-->
 
                 <div class="clear"></div>
-            </div>
 
+            </div>
         </section><!--Fecha Section Contato-->
 
 
