--- a/onepage-template-03-tema-voce-fitness/login.html
+++ b/onepage-template-03-tema-voce-fitness/login.html
@@ -12,7 +12,7 @@
 
     <title>Login PisicoSoft</title>
 
-</head>
+</head> 
 
 
 <body>
@@ -28,8 +28,8 @@
         <form>
           <div class="form-control">
             <input type="text" id="username" placeholder="Name" />
-            <small id="username-error"></small>
-            <span></span>
+              <small l id="username-error"></small>
+              <span></span>
           </div>
 
 
