IMPLEMENTANDO UMA NOVA TELA INDEX MELHORARA COM DIFERENCIAIS

--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -12,27 +12,26 @@
 
     <link rel="stylesheet" type="text/css" href="css/boot.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/magnific-popup.css">
     <link rel="stylesheet" type="text/css" href="css/fonts-icones.css">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/ico" />
+    <link rel="stylesheet" type="text/css" href="css/magnific-popup.css">
+    <link rel="icon" href="img/favicon.png" type="image/ico" />
     <link rel="stylesheet" href="fontes.css">
 
-    <title>PSICOSOFT</title>
+
 
 </head>
 
 <body>
-
+    <title>PSICOSOFT</title>
 
     <header class="main_header container fixed">
-        <div class="content">
 
+        <div class="content">
             <div class="main_header_logo">
                 <a href="index.html" title="PSICOSOFT"><img src="img/logo.png" alt="PSICOSOFT" title="PSICOSOFT" /></a>
             </div>
-
+            
             <div class="icon icon-menu mobile_action"></div>
-
             <ul class="main_header_nav" id="top">
 
                 <li class="main_header_nav_item">
@@ -46,11 +45,10 @@
                 <li class="main_header_nav_item">
                     <a href="consulta.html" class="scrollSuave" title="Consulta">Consulta</a>
                 </li>
-                
             </ul>
-
-            <div class="clear"></div>
         </div>
+
+        <div class="clear"></div>
     </header>
 
 
@@ -64,7 +62,7 @@
                     <div class="mascara">
                         <div class="centraliza">
                             <h1 class="branco">PSICOSOFT</h1>
-                            <p id="subtitulo" class="branco"> Sua mente mais Saudável.</b></p>
+                            <p id="subtitulo" class="branco"> Sua mente mais Saudável</b></p>
                         </div>
 
                         <img src="img/medico.jpeg" alt="PisicoSoft" title="PisicoSoft" />
