--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -87,10 +87,10 @@
 
             <div>
                 <ul class="ul_menu">
-                    <li class="li_menu"><a href="">LOGIN</a></li>
-                    <li class="li_menu"><a href="">CADASTRAR</a></li>
+                    <li class="li_menu"><a href="login.html">LOGIN</a></li>
+                    <li class="li_menu"><a href="cadastro.html">CADASTRAR</a></li>
                     <li class="li_menu"><a href="">PLANOS E PREÇOS</a></li>
-                    <li class="li_menu"><a href="">A PSICOSOFT</a></li>
+                    <li class="li_menu"><a href="consulta.html">A PSICOSOFT</a></li>
                 </ul>
             </div>
         </nav>
