--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -85,7 +85,7 @@
                 <img src="img/logo.png" alt="" class="logotipo">
             </div>
 
-            <div>
+            <div class="menul">
                 <ul class="ul_menu">
                     <li class="li_menu"><a href="login.html">LOGIN</a></li>
                     <li class="li_menu"><a href="cadastro.html">CADASTRAR</a></li>
@@ -97,15 +97,13 @@
 
         <section class="sec1">
 
-           
-
             <div class="titulo1">
                 <img src="img/medico.jpeg" class="medico1">
                 <div class="txt">
                     <h1 class="texto_principal">PSICOSOFT</h1>
                     <h5 class="subtitulo">Software para gerenciamento de clinicas</h5>
                 </div>
-                
+
             </div>
 
         </section>
