--- a/onepage-template-03-tema-voce-fitness/consulta.html
+++ b/onepage-template-03-tema-voce-fitness/consulta.html
@@ -17,28 +17,18 @@
     <header class="main_header fixed">
 
         <div class="content">
-
             <div class="main_header_logo">
                 <a href="index.html" title="PSICOSOFT"><img src="img/logo.png" alt="PSICOSOFT" title="PSICOSOFT" /></a>
             </div>
 
             <div class="icon icon-menu mobile_action"></div>
-
             <ul class="main_header_nav" id="top">
-
-                <li class="main_header_nav_item"><a href="login.html" class="scrollSuave menuAtivo" title="Início">
-                        Entrar</a>
-                </li>
-                <li class="main_header_nav_item"><a href="cadastro.html" class="scrollSuave" title="Cadastro">
-                        Cadastrar</a></li>
-
-                <li class="main_header_nav_item"><a href="consulta.html" class="scrollSuave" title="Consulta">
-                        Consulta</a></li>
-
+                <li class="main_header_nav_item"><a href="login.html" class="scrollSuave menuAtivo" title="Início">Login</a></li>
+                <li class="main_header_nav_item"><a href="cadastro.html" class="scrollSuave" title="Cadastro">Cadastrar</a></li>
+                <li class="main_header_nav_item"><a href="consulta.html" class="scrollSuave" title="Consulta">Agendar</a></li>
+                <li class="main_header_nav_item"><a href="index.html" class="scrollSuave">A PSICOSOFT</a></li>
             </ul>
-
             <div class="clear"></div>
-
         </div>
 
     </header>
