menu bar ajustes

--- a/onepage-template-03-tema-voce-fitness/consulta.html
+++ b/onepage-template-03-tema-voce-fitness/consulta.html
@@ -23,6 +23,7 @@
 
             <div class="icon icon-menu mobile_action"></div>
             <ul class="main_header_nav" id="top">
+                <li class="main_header_nav_item"><a href="index.html" class="scrollSuave">INICIO</a></li>
                 <li class="main_header_nav_item"><a href="login.html" class="scrollSuave menuAtivo" title="Início">Login</a></li>
                 <li class="main_header_nav_item"><a href="cadastro.html" class="scrollSuave" title="Cadastro">Cadastrar</a></li>
                 <li class="main_header_nav_item"><a href="consulta.html" class="scrollSuave" title="Consulta">Agendar</a></li>
