--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -78,19 +78,19 @@
     </header>
 
 
-    <main class="main_content container">
+    <main class="">
 
-        <nav class="menu">
+        <nav class="menu1">
             <div>
                 <img src="img/logo.png" alt="" class="logotipo">
             </div>
 
             <div class="menul">
-                <ul class="ul_menu">
-                    <li class="li_menu"><a href="login.html">LOGIN</a></li>
-                    <li class="li_menu"><a href="cadastro.html">CADASTRAR</a></li>
-                    <li class="li_menu"><a href="consulta.html">AGENDAR</a></li>
-                    <li class="li_menu"><a href="index.html">A PSICOSOFT</a></li>
+                <ul class="ul_menu1">
+                    <li class="li_menu1"><a href="login.html">LOGIN</a></li>
+                    <li class="li_menu1"><a href="cadastro.html">CADASTRAR</a></li>
+                    <li class="li_menu1"><a href="consulta.html">AGENDAR</a></li>
+                    <li class="li_menu1"><a href="index.html">A PSICOSOFT</a></li>
                 </ul>
             </div>
         </nav>
