--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -90,7 +90,7 @@
                     <li class="li_menu1"><a href="login.html">LOGIN</a></li>
                     <li class="li_menu1"><a href="cadastro.html">CADASTRAR</a></li>
                     <li class="li_menu1"><a href="consulta.html">AGENDAR</a></li>
-                    <li class="li_menu1"><a href="index.html">A PSICOSOFT</a></li>
+                    <li class="li_menu1"><a href="index.html">PSICOSOFT</a></li>
                 </ul>
             </div>
         </nav>
