--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -15,6 +15,11 @@
     <link rel='stylesheet'
         href='https://cdn-uicons.flaticon.com/2.3.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <link rel="stylesheet" type="text/css" href="css/fonts-icones.css">
+
+    
+
     <title>PSICOSOFT</title>
 </head>
 
@@ -79,18 +84,21 @@
 
 
     <main class="">
-
+<!-- MENU DESKTOP -->
+        
+<!-- MENU MOBILE -->
         <nav class="menu1">
             <div>
                 <img src="img/logo.png" alt="" class="logotipo">
             </div>
 
             <div class="menul">
-                <ul class="ul_menu1">
-                    <li class="li_menu1"><a href="login.html">LOGIN</a></li>
-                    <li class="li_menu1"><a href="cadastro.html">CADASTRAR</a></li>
-                    <li class="li_menu1"><a href="consulta.html">AGENDAR</a></li>
-                    <li class="li_menu1"><a href="index.html">PSICOSOFT</a></li>
+                <div class="icon icon-menu mobile_action"></div>
+                <ul id="top" class="ul_menu1 main_header_nav">
+                    <li class="li_menu1 main_header_nav_item"><a class="scrollSuave" href="login.html">LOGIN</a></li>
+                    <li class="li_menu1 main_header_nav_item"><a class="scrollSuave" href="cadastro.html">CADASTRAR</a></li>
+                    <li class="li_menu1 main_header_nav_item"><a class="scrollSuave" href="consulta.html">AGENDAR</a></li>
+                    <li class="li_menu1 main_header_nav_item"><a class="scrollSuave" href="index.html">A PSICOSOFT</a></li>
                 </ul>
             </div>
         </nav>
@@ -368,6 +376,9 @@
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
 </body>
 
 </html>
