--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="teste.css">
+
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel='stylesheet'
@@ -14,7 +15,7 @@
         href='https://cdn-uicons.flaticon.com/2.3.0/uicons-bold-straight/css/uicons-bold-straight.css'>
     <link rel='stylesheet'
         href='https://cdn-uicons.flaticon.com/2.3.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    
 
     <link rel="stylesheet" type="text/css" href="css/fonts-icones.css">
 
@@ -118,48 +119,58 @@
 
 
         <section class="sec4">
-            <div class="fundo_azul">
-                <div class="content1">
-
-                    <div class="bem_vindo">
-                        <p class=" p_bemvindo">
-                            PROJETO PSICOSOFT
-                        </p>
-                        <p>
-                            Moldando o futuro da saúde com <br>o sistema que se encaixa com a sua necessidade
-                        </p>
+            <div class="conhecaContainer">
+                <div class="sobrePrincipal">
+                    <div>
+                        <h2 class="sobre">Bem-vindo ao PSICOSOFT</h2>
+                        <div class="subtitulo3">
+                            <p>Moldando o Futuro da Saúde! Com o sistema que se encaixa junto com a sua necessidade.</p>
+                        </div>
                     </div>
+                </div>
+                <div class="allCards">
+                    <div class="cardsContainer">
+                        <div class="cardsConteudo">
 
-                    <div class="box_sobre">
-                        <div class="box_border">
-                            <p>
-                                O PSICOSOFT é um projeto em constante evolução
-                                liderado por um grupo dedicado de sete alunos do curso de Ciências da Computação.
-                                Nossa missão é transformar a forma como as consultas e exames médicos são agendados,
-                                otimizando a eficiência e a qualidade do atendimento no campo sensível da medicina.
-                            </p>
+                            <div class="cardDescricaoConteiner">
+                                <h3 class="cardTitulo">O PSICOSOFT é um projeto em constante evolução</h3>
+                                <div class="cardDescricao">
+                                    <p><b>liderado por um grupo dedicado de sete alunos do curso de Ciências da Computação.</b> Nossa missão é transformar a forma como as consultas e exames médicos são agendados, otimizando a eficiência e a qualidade do atendimento no campo sensível da medicina.</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="box_border">
-                            <p>
-                                Estamos atualmente na fase de desenvolvimento Trabalhando incansavelmente para criar uma
-                                plataforma que revolucionará a experiência de pacientes e profissionais de saúde.
-                            </p>
+                        <div class="cardsConteudo">
+
+                            <div class="cardDescricaoConteiner">
+                                <h3 class="cardTitulo">Estamos atualmente na fase de desenvolvimento</h3>
+                                <div class="cardDescricao">
+                                    <p><b>Trabalhando incansavelmente</b> para criar uma plataforma que revolucionará a experiência de pacientes e profissionais de saúde.</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="box_border">
-                            <p>
-                                Com o PSICOSOFT Nosso objetivo é simplificar o agendamento de consultas e exames,
-                                economizar tempo e, acima de tudo, elevar os padrões de assistência médica.
-                            </p>
+                        <div class="cardsConteudo">
+
+                            <div class="cardDescricaoConteiner">
+                                <h3 class="cardTitulo">Com o PSICOSOFT
+                                </h3>
+                                <div class="cardDescricao">
+                                    <p>Nosso objetivo é <b>simplificar</b> o agendamento de consultas e exames, economizar tempo e, acima de tudo, elevar os padrões de assistência médica.</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="box_border">
-                            <p>
-                                Ainda estamos aperfeiçoando nosso projeto Contamos com o seu apoio e feedback à medida
-                                que avançamos nessa jornada de aprimoramento da assistência médica.
-                            </p>
+                        <div class="cardsConteudo">
+
+                            <div class="cardDescricaoConteiner">
+                                <h3 class="cardTitulo">Ainda estamos aperfeiçoando nosso projeto</h3>
+                                <div class="cardDescricao">
+                                    <p><b>Contamos com o seu apoio e feedback</b> à medida que avançamos nessa jornada de aprimoramento da assistência médica.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </section>
 
 
@@ -260,10 +271,14 @@
 
 
             <div class="colfooter">
-                <div class="titleFooter"> <span class="icon"></span> Atendimentos</div>
-                <p><i class="icon "></i> contato@psicosoft.com.br</p>
-                <p><i class="icon"></i> 11 90000-0000</p>
-                <p><i class="icon"></i> 11 90000-0000</p>
+
+                <ul>
+                    <p class="titleFooter"> Atendimentos</p>
+                    <li><p class="contatos"></p> contato@psicosoft.com.br</li>
+                    <li><p class="contatos"></p> 11 90000-0000</li>
+                    <li><p class="contatos"></p> 11 90000-0000</li>
+                </ul>
+                
             </div>
 
 
