--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -215,7 +215,7 @@
                 </div>
 
                 <div class="txt3">
-                    <img src="img/psiquiatra.png" alt="">
+                    <img src="img/psiquiatra.png" class="img2">
                 </div>
 
             </div>
@@ -271,6 +271,8 @@
 
 
             <div class="colfooter">
+
+                
 
                 <ul>
                     <p class="titleFooter"> Atendimentos</p>
