FINAL RESPONSIVIDADE GLORIA

--- a/onepage-template-03-tema-voce-fitness/consulta.html
+++ b/onepage-template-03-tema-voce-fitness/consulta.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" type="text/css" href="css/fonts-icones.css">
     <link rel="stylesheet" type="text/css" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="teste.css">
 
 </head>
 
@@ -16,21 +17,22 @@
 
     <header class="main_header fixed">
 
-        <div class="content">
-            <div class="main_header_logo">
-                <a href="index.html" title="PSICOSOFT"><img src="img/logo.png" alt="PSICOSOFT" title="PSICOSOFT" /></a>
+        <nav class="menu1">
+            <div>
+                <img src="img/logo.png" alt="" class="logotipo">
             </div>
 
-            <div class="icon icon-menu mobile_action"></div>
-            <ul class="main_header_nav" id="top">
-                <li class="main_header_nav_item"><a href="index.html" class="scrollSuave">INICIO</a></li>
-                <li class="main_header_nav_item"><a href="login.html" class="scrollSuave menuAtivo" title="Início">Login</a></li>
-                <li class="main_header_nav_item"><a href="cadastro.html" class="scrollSuave" title="Cadastro">Cadastrar</a></li>
-                <li class="main_header_nav_item"><a href="consulta.html" class="scrollSuave" title="Consulta">Agendar</a></li>
-                <li class="main_header_nav_item"><a href="index.html" class="scrollSuave">A PSICOSOFT</a></li>
-            </ul>
-            <div class="clear"></div>
-        </div>
+            <div class="menul">
+                <div class="icon icon-menu mobile_action"></div>
+                <ul id="top" class="ul_menu1 main_header_nav">
+                    <li class="li_menu1 main_header_nav_item"><a class="scrollSuave" href="index.html">INICIO</a></li>
+                    <li class="li_menu1 main_header_nav_item"><a class="scrollSuave" href="login.html">LOGIN</a></li>
+                    <li class="li_menu1 main_header_nav_item"><a class="scrollSuave" href="cadastro.html">CADASTRAR</a></li>
+                    <li class="li_menu1 main_header_nav_item"><a class="scrollSuave" href="consulta.html">AGENDAR</a></li>
+                    <li class="li_menu1 main_header_nav_item"><a class="scrollSuave" href="index.html">A PSICOSOFT</a></li>
+                </ul>
+            </div>
+        </nav>
 
     </header>
 
