--- a/onepage-template-03-tema-voce-fitness/cadastro.html
+++ b/onepage-template-03-tema-voce-fitness/cadastro.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="cadastro_estilo.css">
     <link rel="stylesheet" href="menu.css">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" type="text/css" href="css/fonts-icones.css">
+    
     <title>Formulário</title>
 </head>
 
@@ -124,6 +126,10 @@
         </form>
     </div>
 </body>
-<script src="js/register.js"></script>
+    <script src="js/register.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
 
 </html>
