--- a/onepage-template-03-tema-voce-fitness/login.html
+++ b/onepage-template-03-tema-voce-fitness/login.html
@@ -25,39 +25,13 @@
     <h1 id="titulo">PSICOSOFT</h1>
   </div>
     <div class="container" id="container">
-      <div class="form-container register-container">
-
-
-        <form>
-          <div class="form-control">
-            <input type="text" id="username" placeholder="Name" />
-              <small l id="username-error"></small>
-              <span></span>
-          </div>
-
-
-          <div class="form-control">
-            <input type="email" id="email" placeholder="Email" />
-            <small id="email-error"></small>
-            <span></span>
-          </div>
-
-
-          <div class="form-control">
-            <input type="password" id="password" placeholder="Password" />
-            <small id="password-error"></small>
-            <span></span>
-          </div>
-        </form>
-      </div>
-
 
       <div class="form-container login-container">
 
         <form class="form-lg">
           <h1>Faça Login</h1>
           <div class="form-control2">
-            <input type="email" class="email-2" placeholder="Email" />
+            <input type="email" class="email" placeholder="Email" id="email" />
             <small class="email-error-2"></small>
             <span></span>
           </div>
@@ -65,7 +39,7 @@
 
 
           <div class="form-control2">
-            <input type="password" class="password-2" placeholder="Password" />
+            <input type="password" class="password" placeholder="Password" />
             <small class="password-error-2"></small>
             <span></span>
           </div>
@@ -87,7 +61,7 @@
 
           </div>
 
-          <a onclick="login()" class="button" href="consulta.html">login</a>
+          <a onclick="Bem_vindo()" class="button"id="logar" href="consulta.html">login</a>
 
           <a href="cadastro.html" >Registrar-se</a>
           
